# karo-x2-sdk-python

./: API.md  CHANGELOG.md  README.md  pyproject.toml
examples/: emergency_stop.py  estop_cmdvel_e2e.py  subscribe_status.py  teleop.py
karo_x2_sdk/: __init__.py  capabilities.py  connection_state.py  diagnostics.py  error.py  robot.py  subscription.py  topic.py
karo_x2_sdk/_internal/: proto_codec.py  robot_impl.py  subscription_impl.py  ws_client.py
karo_x2_sdk/_internal/proto_gen/: __init__.py
karo_x2_sdk/_internal/proto_gen/karo/v1/: common_pb2.py  control_pb2.py  events_pb2.py  maps_pb2.py  markers_pb2.py  move_pb2.py  nogo_zones_pb2.py  patrol_pb2.py  rpc_pb2.py  safety_pb2.py  stream_pb2.py  tasks_pb2.py  telemetry_stream_pb2.py  transport_pb2.py
karo_x2_sdk/_internal/proto_gen/sdk/: common_pb2.py  session_pb2.py
karo_x2_sdk/_internal/proto_gen/sdk/v1/: telemetry_pb2.py
karo_x2_sdk/messages/: __init__.py  robot_status.py  safety_event.py  task_event.py
proto/: README.md  STABILITY.md
proto/karo/v1/: common.proto  control.proto  events.proto  maps.proto  markers.proto  move.proto  nogo_zones.proto  patrol.proto  rpc.proto  safety.proto  stream.proto  tasks.proto  telemetry_stream.proto  transport.proto
proto/sdk/: common.proto  session.proto
proto/sdk/v1/: telemetry.proto
scripts/: gen_proto.sh
